@@ -32,6 +32,7 @@ Improved ZX Vision:
 - Text input fields now handle repeated keys
 - Some text input fields now have history of last items, and history is saved on configuration file
 - Added function to maximize all windows
+- Allow reducing character height
 
 * Fixes:
 
